Updates from ShareLaTeX

--- a/01_introduction.tex
+++ b/01_introduction.tex
@@ -1,3 +1,7 @@
 \chapter{Introduction}
-According to \emph{\citep{SurveyAD}} the first ideas of the concept Automatic Differentiation dates back to the 1950 \emph{\citep{beda1959programs}}. More specifically forward Automatic Differentiation was discovered by Wengert in 1964 \emph{\citep{wengert1964simple}}. After the discovery of Wengert, AD was not used actively until the 1980's when modern computers and computer languages gave the theory new feet to stand on. Greiwank did some review of the theory in 1989 \emph{\citep{griewank1989automatic}}.
+\begin{itemize}
+    \item Skrive kort om historien til AD og kort fortalt hva det er og hva det brukes til.
+    \item Skrive om hva jeg skal gjøre i denne rapporten
+\end{itemize}
+Automatic differentiation(AD) is a method that automatically calculate the derivatives of a function with no human interaction. It is however not the method of finite differences nor symbolic differentiation. The method consist of separating an expression into a finite set of elementary operations +,-,* and / and elementary functions like for example the exponential and the logarithm. It then perform standard differentiation rules to these operations and functions. This give derivative values as accurate as hand derived derivatives, but with the loss of possible human error and with low computational cost. AD can be split into two different methods - backward AD and forward AD. They both obtain the derivatives, but with different approaches with different capabilities. The difference between the two will be discussed closer in \autoref{sec:AD}. According to \emph{\citep{SurveyAD}} the first ideas of the concept Automatic Differentiation dates back to the 1950 \emph{\citep{beda1959programs}}. More specifically forward AD was discovered by Wengert in 1964 \emph{\citep{wengert1964simple}}. It is more difficult to date when Backward AD was discovered, but the first computer program that . After the discovery of Wengert, AD was not used actively until the 1980's when modern computers and computer languages gave the theory new feet to stand on. Greiwank did some review of the theory in 1989 \emph{\citep{griewank1989automatic}}.
 \listoftodos
