--- a/05_conclusion_and_future_work.tex
+++ b/05_conclusion_and_future_work.tex
@@ -1,1 +1,7 @@
 \chapter{Conclusion and Future Work}
+\begin{itemize}
+    \item Oppsummere kort hva som har blitt gjort
+    \item Konkludere på hastighetsforskjellene som har blitt sett på de forskjellige AD-metodene
+    \item Skrive om videre implementering for testing av AD-tool
+    \item teste av andre implementasjoner av AD i Julia for å få raskere enn matlab. Spesielt mtp at for-løkker er kjapt
+\end{itemize}
