--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -145,3 +145,10 @@ eprint = {
   year={1989},
   publisher={Amsterdam}
 }
+
+@techreport{speelpenning1980compiling,
+  title={Compiling fast partial derivatives of functions given by algorithms},
+  author={Speelpenning, Bert},
+  year={1980},
+  institution={Illinois Univ., Urbana (USA). Dept. of Computer Science}
+}
