--- a/03_implementation.tex
+++ b/03_implementation.tex
@@ -238,11 +238,11 @@ The difference in implementation of the Jacobian should make a big impact on the
          $30\times30\times30$ & ~ & 188.8s & 147.8s & 1.28\\ \hline
     \end{tabular}
 \end{table}
-For 10 cells in each spatial direction it is clear that what we assumed based on the structure of the Jacobian in \autoref{fig:flowSolverJacobian} is true. The ForwardDiff method takes much longer time than ForwardAutoDiff and MRST. Since ForwardDiff already spends over a minute for $10\times 10\times 10$ cells, it is omitted for finer discretizations. According to the results in \autoref{tab:FlowSolverSpeedTest}, MRST is a bit faster than ForwardAutoDiff. We can also see from the column farthest to the right that the ratio between time spent using MRST and ForwardAutoDiff stays approximately constant as the complexity of the problem grows. This indicates that the two different solvers scales equally, it is although not possible to say if it is the AD or the linear solver part that makes the solver in MATLAB faster than the one in Julia. To get a better indication of what part of the code makes the difference, I have tested the speed of the linear solvers solving the system \textbf{Ax} = \textbf{b} in MATLAB and Julia. To make the test as relevant as possible I have made the matrix \textbf{A}$\in\Re^{n\times n}$ as a random sparse matrix where 0.05 percent of the elements are non zero. The \textbf{b} vector is a random vector of values between 0 and 1. The result for different $n$ can be seen in \autoref{fig:benchmarkLinearSolver}. 
+For 10 cells in each spatial direction it is clear that what we assumed based on the structure of the Jacobian in \autoref{fig:flowSolverJacobian} is true. The ForwardDiff method takes much longer time than ForwardAutoDiff and MRST. Since ForwardDiff already spends over a minute for $10\times 10\times 10$ cells, it is omitted for finer discretizations. According to the results in \autoref{tab:FlowSolverSpeedTest}, MRST is a bit faster than ForwardAutoDiff. We can also see from the column farthest to the right that the ratio between time spent using MRST and ForwardAutoDiff stays approximately constant as the complexity of the problem grows. This indicates that the two different solvers scales equally, it is although not possible to say if it is the AD or the linear solver part that makes the solver in MATLAB faster than the one in Julia. To get a better indication of what part of the code makes the difference, I have tested the speed of the linear solvers solving the system \textbf{Ax} = \textbf{b} in MATLAB and Julia. The built in linear solvers uses different methods based on the structure of the matrix. Hence, to make the test as relevant as possible I have used the Jacobian from the first step of the flow solver as the matrix \textbf{A}. The \textbf{b} vector is a random vector of values between 0 and 1. The result for the three different discretizations with 10, 20 and 30 cells in each spatial direction can be seen in \autoref{fig:benchmarkLinearSolver}. 
 \begin{figure}[htbp]
     \centering
     \includegraphics[width = 0.9\textwidth]{figures/benchmark_linear_solvers.pdf}
-    \caption{Time spent solving a system \textbf{Ax} = \textbf{b} for \textbf{x}$\in\Re^{n}$.}
+    \caption{Time spent solving the system \textbf{Ax} = \textbf{b} for \textbf{x}$\in\Re^{n}$ and \textbf{A} = \textbf{J}, the Jacobian from the first step in the flow solver.}
     \label{fig:benchmarkLinearSolver}
 \end{figure}
 We can see that the linear solvers perform very similar except for the highest value of $n$. This however is most likely the fact that, because of the length of the test, the computer that tested these solvers becomes warm in the ending phase of the test, hence it reduces it's computational speed. Since the test of the MATLAB solver executed last, it is safe to say that the increase in time is due to the heating of the computer. With this in mind we can say that the linear solvers in MATLAB and Julia perform very similar and that the speed differences in \autoref{tab:FlowSolverSpeedTest} most likely occur from the difference in the AD-tools.
